fixed width:; and max-width:; to optimize better on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -240,8 +240,8 @@ html {
     flex: 1;
     align-items: center;
     justify-content: center;
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
+    max-width: 420px;
     height: auto;
 }
 
@@ -259,7 +259,8 @@ html {
     font-size: 50px;
     color: #f4f4f4;
     border-bottom: 3px solid #555;
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     height: auto;
     text-align: center;
     margin-bottom: 15px;
@@ -285,7 +286,8 @@ html {
     font-family: "Cutive Mono", monospace;
     color: #f4f4f4;
     text-align: left;
-    width: 220px;
+    width: 100%;
+    max-width: 220px;
     height: auto;
     list-style-type: none;
     
@@ -303,7 +305,7 @@ html {
         justify-content: space-between;
         flex-direction: column;
         position: fixed;
-        width: 100%;
+        max-width: 100%;
         height: auto;
     }
 
